k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal
  labels:
    app: boundary-lab-portal
